scrollbar fix

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -10,7 +10,6 @@
 
 .content {
   position: relative;
-  overflow: hidden;
 }
 
 .leftSide {
