--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,17 +3,17 @@ a {
   background-image: none;
 }
 
-body {
+html {
   overflow: hidden;
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 6px;
+  width: 12px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: gray;
   border-radius: 50px;
-  border: 0px solid;
+  border: 3px solid white;
 }
